apps/wordpress/service-mysql-galera.yaml
# A headless service to create DNS records
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: galera
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: mysql
  # *.galera.default.svc.cluster.local
  clusterIP: None
  selector:
    app: mysql
  publishNotReadyAddresses: true
