apps/wordpress/service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wordpress
  name: wordpress
spec:
  ports:
    - port: 80
  selector:
    name: wordpress
